--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: webapp
-          image: 4glapp/webapp:latest
+          image: pepperdragonfly/4glapp:latest
           ports: [{ containerPort: 8080 }]
           readinessProbe:
             httpGet: { path: "/", port: 8080 }
