--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -3,18 +3,46 @@ kind: Deployment
 metadata:
   name: webapp
   namespace: default
+  labels:
+    app: webapp
 spec:
   replicas: 1
+  revisionHistoryLimit: 5
   selector:
-    matchLabels: { app: webapp }
+    matchLabels:
+      app: webapp
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   template:
     metadata:
-      labels: { app: webapp }
+      labels:
+        app: webapp
     spec:
-      # (Docker Hub 비공개면) imagePullSecrets: [{ name: dockerhub-secret }]
       containers:
         - name: webapp
-          image: pepperdragonfly/4glapp:CHANGEME   # Jenkins가 set image로 바꿔줌
-          imagePullPolicy: Always                  # 항상 레지스트리 확인/당김
-          ports: [{ containerPort: 8080 }]
-
+          image: pepperdragonfly/4glapp:placeholder
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 8080
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            initialDelaySeconds: 15
+            periodSeconds: 10
+          resources:
+            requests:
+              cpu: 50m
+              memory: 128Mi
+            limits:
+              cpu: 500m
+              memory: 512Mi
