--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,6 @@
-# 꼭 필요한 것만 제외하고, src/는 절대 제외하지 마!
+# 빌드에 필요 없는 것만 제외
 .git
 .gitignore
 README.md
-*.md
+**/*.log
 target/
-node_modules/
-*.log
-**/.DS_Store
